Annotation: set canvas background to transparent

The default canvas color is white. So when annotating images with
transparency (screen shot of window with a drop shadow), the transparent
areas will be white, because the annotation widget uses the canvas color
for the image background.

BUG: 432753
FIXED-IN: 21.08.3